# fs2es-indexer

./: .gitignore  CHANGELOG.md  README.md  build-package-directory.sh  config.dist.yml  es-index-mapping.json  fs2es-indexer  fs2es-indexer.service  publish-pypi.sh  pyproject.dist.toml  pyproject.toml  requirements.txt  role.yml  rsyslog-smbd_audit.conf  samba-audit-logrotate.conf  setup.py
DEBIAN/: conffiles  control  postinst  postrm
config/: config.yml  es-index-mapping.json  es-index-settings.json
fs2es_indexer/: Fs2EsIndexer.py  fs2es-indexer  fs2es-indexer.py
lib/: AuditLogChangesWatcher.py  ChangesWatcher.py  FanotifyChangesWatcher.py  Fs2EsIndexer.py  __init__.py
lib/ChangesWatcher/: AuditLogChangesWatcher.py  ChangesWatcher.py  FanotifyChangesWatcher.py
lib/Database/: DbAdapter.py  ElasticsearchDbAdapter.py
